--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 
+	<link rel="icon" type="image/x-icon" href="file:///C:/Users/BerrouTIC/Pictures/Ali%20Muhammad%20Ali%20-%20YouTube_files/Nouveau%20dossier/Nouveau%20dossier/(96)%20Pinterest_files/images.png">
+
 	<style type="text/css">
 
 		body {
